tests/errors/invalid_comparison.peb
// Test: Invalid comparison (= instead of ==)
if (5 = 5) {
    display("Equal")
}
